--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
-    "firebase": "^7.5.2",
+    "firebase": "^7.6.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-firestore": "^1.0.1",
+    "react-redux": "^7.1.3",
+    "react-redux-firebase": "^3.0.5",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-firestore": "^0.11.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
