--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-calendar": "^2.19.2",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
     "react-firestore": "^1.0.1",
     "react-redux": "^7.1.3",
@@ -17,7 +19,8 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-firestore": "^0.11.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "tail.datetime": "^0.4.13"
   },
   "scripts": {
     "start": "react-scripts start",
