--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-calendar": "^2.19.2",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
+    "react-firebase-file-uploader": "^2.4.3",
     "react-firestore": "^1.0.1",
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^3.0.0",
