--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux-firebase": "^3.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-share": "^4.0.1",
     "redux": "^4.0.5",
     "redux-firestore": "^0.11.0",
     "redux-thunk": "^2.3.0",
