--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-calendar": "^2.19.2",
-    "react-datepicker": "^2.13.0",
+    "react-datepicker": "^2.14.0",
     "react-dom": "^16.13.0",
     "react-firebase-file-uploader": "^2.4.3",
     "react-firestore": "^1.0.1",
     "react-redux": "^7.2.0",
     "react-redux-firebase": "^3.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.4.0",
     "react-share": "^4.0.1",
     "redux": "^4.0.5",
     "redux-firestore": "^0.11.0",
