--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.0",
     "react-firebase-file-uploader": "^2.4.3",
     "react-firestore": "^1.0.1",
+    "react-radio-buttons": "^1.2.2",
     "react-redux": "^7.2.0",
     "react-redux-firebase": "^3.1.2",
     "react-router-dom": "^5.1.2",
